_posts/v0.40/users-guide/account-settings.md
---
version: v0.40
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: 'Users Guide'
title: 'Account Settings'
source_url: 'https://github.com/metabase/metabase/blob/master/docs/users-guide/account-settings.md'
layout: docs
---

## Account settings

You can view your account settings by clicking on the **gears** icon in the upper right of the main navigation bar, then selecting **Account settings**. Here you'll find three tabs:

- [Profile](#account-profile)
- [Password](#account-password)
- [Login history](#account-login-history)

### Account profile

You can set your first and last names, change your email address, and set your language. See our list of [supported languages](../faq/general/what-languages-can-be-used-with-metabase.html#currently-available-languages).

### Account password

You can change your password here. Note that if your Metabase uses Single Sign-On (SSO), your administrator will have disabled this password section, as your identity provider will manage logins.

If you're having trouble logging in, see our [How do I reset my password](../faq/using-metabase/how-do-i-reset-my-password.html).

### Account login history

The login history lists each login, along with some location information (if available), and some client information (like Browser (Firefox/Windows)).
If you see any suspicious login attempts, change your password and notify your administrator.

#### A note about new login emails

Whenever you log in from a new device, Metabase will send you an email just to let you know someone (hopefully you) has logged in from an unrecognized device. If you see this email, but don't remember logging in, or don't recognize the device, change your password and let your administrator know. 
