_posts/v0.42/users-guide/account-settings.md
---
version: v0.42
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: 'Users Guide'
title: 'Account Settings'
source_url: 'https://github.com/metabase/metabase/blob/master/docs/users-guide/account-settings.md'
layout: docs
---

# Account settings

You can view your account settings by clicking on the **gears** icon in the upper right of the main navigation bar, then selecting **Account settings**. Here you'll find three tabs:

- [Profile](#account-profile)
- [Password](#account-password)
- [Login history](#account-login-history)

## Account profile

You can set your first and last names, change your email address, and set your language. See our list of [supported languages](../administration-guide/localization.html).

## Account password

You can change your password here. Note that if your Metabase uses Single Sign-On (SSO), your administrator will have disabled this password section, as your identity provider will manage logins.

If you're having trouble logging in, see our [People can't log into Metabase](../troubleshooting-guide/cant-log-in.html).

## Account login history

The login history lists each login, along with some location information (if available), and some client information (like Browser (Firefox/Windows)).
If you see any suspicious login attempts, change your password and notify your administrator.

### A note about new login emails

Whenever you log in from a new device, Metabase will send you an email just to let you know someone (hopefully you) has logged in from an unrecognized device. If you see this email, but don't remember logging in, or don't recognize the device, change your password and let your administrator know. 

## Disable animations in Metabase

This isn't an in-Metabase setting, but just so you know: you can disable UI animations in Metabase (like sidebars sliding around, or rotating spinners) by changing the settings for your operating system so it respects the `prefers-reduced-motion` CSS media feature. This change will also affect other applications, not just Metabase. Check out the instructions for how to set the user preferences for your operating system in the [MDN Web Docs](https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-reduced-motion#user_preferences).
